--- a/2018-06-23-algorithm.ipynb
+++ b/2018-06-23-algorithm.ipynb
@@ -23,14 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[6, 10, 38, 49, 74, 78, 78, 90, 95, 96]\n"
+      "[21, 22, 27, 35, 47, 55, 60, 78, 84, 93]\n"
      ]
     }
    ],
@@ -59,6 +59,68 @@
     "    return(numbers)\n",
     "print(selection_sort(numbers))\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "버블정렬\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[128, 228, 266, 381, 403, 634, 789, 862, 940, 989]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "numbers = [random.randrange(1000) for i in range(10)]\n",
+    "\n",
+    "def bubble_sort(list):\n",
+    "    length = len(list)\n",
+    "    for i in range(length -1, 0, -1):\n",
+    "        for j in range(i):\n",
+    "            if list[j] > list[j+1]:\n",
+    "                list[j], list[j+1] = list[j+1], list[j]\n",
+    "    return list\n",
+    "print(bubble_sort(numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[311, 332, 417, 484, 512, 534, 674, 804, 844, 912]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "numbers = [random.randrange(1000) for i in range(10)]\n",
+    "\n",
+    "def bubble_sort(list):\n",
+    "    length = len(list)\n",
+    "    for i in range(length -1, 0 , -1):\n",
+    "        for j in range(i):\n",
+    "            if list[j] > list[j+1]:\n",
+    "                list[j], list[j+1] = list[j+1], list[j]\n",
+    "    return (numbers)\n",
+    "print(bubble_sort(numbers))"
    ]
   }
  ],
