--- a/2018-06-23-algorithm.ipynb
+++ b/2018-06-23-algorithm.ipynb
@@ -30,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[21, 22, 27, 35, 47, 55, 60, 78, 84, 93]\n"
+      "[1, 4, 22, 54, 64, 67, 74, 78, 83, 94]\n"
      ]
     }
    ],
@@ -62,6 +62,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 11, 11, 13, 15, 47, 59, 69, 78, 81]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 선택정렬\n",
+    "import random\n",
+    "numbers = list()\n",
+    "for i in range(10):\n",
+    "    numbers.append(random.randrange(100))\n",
+    "def selection_sort(a):\n",
+    "    length = len(a)\n",
+    "    for i in range(length - 1):\n",
+    "        min_index = i\n",
+    "        for j in range(i+1, length):\n",
+    "            if a[j] < a[min_index]:\n",
+    "                min_index = j\n",
+    "        if min_index != i:\n",
+    "            a[min_index], a[i] = a[i], a[min_index]\n",
+    "    return(numbers)\n",
+    "print(selection_sort(numbers))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -71,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[128, 228, 266, 381, 403, 634, 789, 862, 940, 989]\n"
+      "[173, 195, 298, 536, 548, 622, 695, 782, 907, 924]\n"
      ]
     }
    ],
@@ -98,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[311, 332, 417, 484, 512, 534, 674, 804, 844, 912]\n"
+      "[166, 197, 390, 552, 571, 661, 701, 846, 907, 985]\n"
      ]
     }
    ],
@@ -122,6 +154,88 @@
     "    return (numbers)\n",
     "print(bubble_sort(numbers))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 22, 106, 255, 264, 285, 412, 768, 839, 974]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "numbers = [random.randrange(1000) for i in range(10)]\n",
+    "\n",
+    "def bubble_sort(list):\n",
+    "    length = len(list)\n",
+    "    for i in range(length -1, 0, -1):\n",
+    "        for j in range(i):\n",
+    "            if list[j] > list[j+1]:\n",
+    "                list[j], list[j+1] = list[j+1], list[j]\n",
+    "    return (numbers)\n",
+    "print(bubble_sort(numbers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "삽입정렬\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'indedx' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-7d4e173a1fd2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0maaa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurr_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0maaa\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minsertion_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maaa\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-17-7d4e173a1fd2>\u001b[0m in \u001b[0;36minsertion_sort\u001b[0;34m(aaa)\u001b[0m\n\u001b[1;32m     15\u001b[0m             \u001b[0;31m# 비교한 숫자가 더 크면 뒤로 보낸다.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m             \u001b[0maaa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maaa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m             \u001b[0mindedx\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0maaa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurr_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0maaa\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'indedx' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "aaa = list()\n",
+    "for i in range(10):\n",
+    "    aaa.append(random.randrange(100))\n",
+    "\n",
+    "def insertion_sort(aaa):\n",
+    "    length = len(aaa)\n",
+    "    for i in range(1, length):\n",
+    "        # 비교할 숫자를 담아둘 빨간색 박스\n",
+    "        curr_value = aaa[i]\n",
+    "        # 여기까지가 빨간색 박스를 위로올려두는 코드\n",
+    "        index = i\n",
+    "        #\n",
+    "        while index > 0 and aaa[index - 1] > curr_value:\n",
+    "            # 비교한 숫자가 더 크면 뒤로 보낸다.\n",
+    "            aaa[index] = aaa[index - 1]\n",
+    "            indedx -= 1\n",
+    "        aaa[index] = curr_value\n",
+    "    return aaa\n",
+    "print(insertion_sort(aaa))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
