--- a/2018-06-23-algorithm.ipynb
+++ b/2018-06-23-algorithm.ipynb
@@ -157,14 +157,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[8, 22, 106, 255, 264, 285, 412, 768, 839, 974]\n"
+      "[156, 412, 413, 472, 496, 519, 526, 582, 832, 901]\n"
      ]
     }
    ],
@@ -183,6 +183,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[156, 412, 413, 472, 496, 519, 526, 582, 832, 901]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def insertion_sort(list):\n",
+    "    length = len(list)\n",
+    "    \n",
+    "    for i in range(1, length):\n",
+    "        curr = list[i]\n",
+    "        index = i\n",
+    "        \n",
+    "        while index > 0 and list[index - 1] > curr:\n",
+    "            list[index] = list[index-1]\n",
+    "            index -= 1\n",
+    "            \n",
+    "        list[index] = curr\n",
+    "    return list\n",
+    "print(insertion_sort(numbers.copy()))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -191,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -201,8 +231,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-7d4e173a1fd2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0maaa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurr_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0maaa\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minsertion_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maaa\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-17-7d4e173a1fd2>\u001b[0m in \u001b[0;36minsertion_sort\u001b[0;34m(aaa)\u001b[0m\n\u001b[1;32m     15\u001b[0m             \u001b[0;31m# 비교한 숫자가 더 크면 뒤로 보낸다.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m             \u001b[0maaa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maaa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m             \u001b[0mindedx\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0maaa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurr_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0maaa\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-1-7d4e173a1fd2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0maaa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurr_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0maaa\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minsertion_sort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maaa\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-1-7d4e173a1fd2>\u001b[0m in \u001b[0;36minsertion_sort\u001b[0;34m(aaa)\u001b[0m\n\u001b[1;32m     15\u001b[0m             \u001b[0;31m# 비교한 숫자가 더 크면 뒤로 보낸다.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m             \u001b[0maaa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maaa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m             \u001b[0mindedx\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m         \u001b[0maaa\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurr_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0maaa\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'indedx' referenced before assignment"
      ]
     }
@@ -228,6 +258,93 @@
     "        aaa[index] = curr_value\n",
     "    return aaa\n",
     "print(insertion_sort(aaa))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "rm -rf\n",
+    "recursive: (재귀적으로)하위 폴더까지 삭제\n",
+    "어떤 순서대로 지울까?\n",
+    "\n",
+    "Implementation!\n",
+    "1부터 n까지 자연수를 모두 더하는 코드\n",
+    "def calc_sum(num):\n",
+    "result = 0\n",
+    "for i in range(num+1):\n",
+    "result += i\n",
+    "return(result)\n",
+    "\n",
+    "sum(n) == n + sum(n-1)\n",
+    "\n",
+    "재귀함수 만들기\n",
+    "리턴조건 만들기!!!!!-중요!!!!!\n",
+    "리턴이 없으면 무한히 돌고도는 함수가 된다.\n",
+    "\n",
+    "fibonacci(n) = fibonacci(n-1) + fibonacci(n-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = 10\n",
+    "def calc_sum(num):\n",
+    "    if num == 1:\n",
+    "        return num\n",
+    "    return num + calc_sum(num - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(calc_sum(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "832040\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(index):\n",
+    "    if index < 2:\n",
+    "        return index\n",
+    "    return fibonacci(index - 1) + fibonacci(index - 2)\n",
+    "print(fibonacci(30))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "quick sort특징\n",
+    "1. 임의의 피봇을 두고 피봇보다 작은 값/ 큰 값으로 분류한다.\n",
+    "2. 분류할 때에 swap을 사용한다.\n",
+    "3. 피봇보다 작은 값들/ 큰 값들 그들끼리는 정렬되지 않은 상태/\n",
+    "4. 분류를 마치면 큰 값 중 가장 앞 인덱스와 피봇 swap"
    ]
   },
   {
