--- a/insertion_sort.ipynb
+++ b/insertion_sort.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[71, 136, 150, 213, 323, 338, 372, 507, 509, 728]\n"
+     ]
+    }
+   ],
    "source": [
+    "import random\n",
+    "numbers = [random.randrange(1000) for i in range(10)]\n",
+    "\n",
     "def insertion_sort(list):\n",
     "    length = len(list)\n",
     "    for i in range(1, length):\n",
@@ -16,7 +27,7 @@
     "            index -= 1\n",
     "        list[index] = curr\n",
     "    return list\n",
-    "print(insertion_sort)"
+    "print(insertion_sort(numbers.copy()))"
    ]
   }
  ],
