--- a/bubble_sort.ipynb
+++ b/bubble_sort.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[199, 297, 321, 404, 453, 476, 497, 703, 921, 976]\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "numbers = [random.randrange(1000) for i in range(10)]\n",
@@ -12,7 +20,11 @@
     "def bubble_sort(list):\n",
     "    length = len(list)\n",
     "    for i in range(length -1, 0, -1):\n",
-    "        for j in range(i)"
+    "        for j in range(i):\n",
+    "            if list[j] > list[j+1]:\n",
+    "                list[j], list[j+1] = list[j+1], list[j]\n",
+    "    return(numbers)\n",
+    "print(bubble_sort(numbers))"
    ]
   }
  ],
