--- a/2018-06-23-algorithm.ipynb
+++ b/2018-06-23-algorithm.ipynb
@@ -164,7 +164,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[156, 412, 413, 472, 496, 519, 526, 582, 832, 901]\n"
+      "[19, 22, 133, 198, 235, 434, 587, 765, 784, 810]\n"
      ]
     }
    ],
@@ -352,7 +352,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "numbers = [random.randrange(1000) for i in range(10)]\n",
+    "for i in range(10):\n",
+    "    numbers.append(random.randrange(100))\n",
+    "def selection_sort(a):\n",
+    "    if"
+   ]
   }
  ],
  "metadata": {
