합병정렬 추가

--- a/2018-06-23-algorithm.ipynb
+++ b/2018-06-23-algorithm.ipynb
@@ -349,16 +349,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-85e969c79962>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-85e969c79962>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    if\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "import random\n",
-    "numbers = [random.randrange(1000) for i in range(10)]\n",
-    "for i in range(10):\n",
-    "    numbers.append(random.randrange(100))\n",
-    "def selection_sort(a):\n",
-    "    if"
+    "def merge_sort(list):\n",
+    "    length = len(list)\n",
+    "    \n",
+    "    if length > 1:\n",
+    "        mid = length // 2\n",
+    "        left_list list[:mid]\n",
+    "        rigth_list = list[mid:]\n",
+    "        \n",
+    "        merge_sort(left_list)\n",
+    "        merge_sort(right_list)\n",
+    "        \n",
+    "        i = 0\n",
+    "        j = 0\n",
+    "        k = 0\n",
+    "        length_left = len(left_list)\n",
+    "        length_right = len(right_list)\n",
+    "        \n",
+    "        while i < length_left and j < length_right:\n",
+    "            if left_list[i] < right_list[j]:\n",
+    "                list[k] = left_list[i]\n",
+    "                i += 1\n",
+    "                k += 1\n",
+    "                \n",
+    "            else:\n",
+    "                list[k] = left_list[i]\n",
+    "                j += 1\n",
+    "                k += 1\n",
+    "        while i < length_left:\n",
+    "            list[k] = left_list[i]\n",
+    "            i += 1\n",
+    "            k += 1\n",
+    "            \n",
+    "        while j < length_right:\n",
+    "            list[k] = right_list[j]\n",
+    "            j += 1\n",
+    "            k += 1\n",
+    "            \n",
+    "        \n",
+    "            "
    ]
   }
  ],
